--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <img class="header__logo" src="./images/__logo.svg" alt="Лого" />
         <div class="header__lang-link">
           <a class="header__each-lang-link header__each-lang-link_chosen">Ru</a>
-          <a class="header__each-lang-link header__each-lang-link_chosen">En</a>
+          <a class="header__each-lang-link">En</a>
         </div>
       </header>
 
@@ -24,10 +24,10 @@
           <p class="lead__subtitle">
             Настоящая страна не в выпусках новостей, а здесь.
           </p>
-          <figure>
-          <img class="lead__image" src="./images/__image.jpg" alt="Карта" />
-          <figcaption class="lead__caption">ваша полка — верхняя</figcaption>
-        </figure>
+          <figure class="lead__image-container">
+            <img class="lead__image" src="./images/__image.jpg" alt="Карта" />
+            <figcaption class="lead__caption">ваша полка — верхняя</figcaption>
+          </figure>
         </section>
 
         <section class="intro">
@@ -121,7 +121,6 @@
         </section>
 
         <section class="places">
-
           <article class="place">
             <h2 class="place__title">Куршская коса</h2>
             <div class="place__website">
