правки после 3 ревью

--- a/index.html
+++ b/index.html
@@ -5,7 +5,6 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="./pages/index.css" />
-
     <title>Russian Travel</title>
   </head>
   <body class="root">
@@ -13,8 +12,8 @@
       <header class="header">
         <img class="header__logo" src="./images/__logo.svg" alt="Лого" />
         <div class="header__lang-link">
-          <a class="header__each-lang-link header__each-lang-link_chosen">Ru</a>
-          <a class="header__each-lang-link">En</a>
+          <a class="header__each-lang-link header__each-lang-link_chosen" href="#">Ru</a>
+          <a class="header__each-lang-link" href="#">En</a>
         </div>
       </header>
 
